--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="container">
       <div class="title">
   <img src="pete-logo.png" alt="$PETE logo" class="logo">
+  <a href="https://x.com/pete" target="_blank">
+    <img src="x-logo.png" alt="X (Twitter)" class="x-logo">
+  </a>
 </div>
       <div class="card">
         <div class="video-wrapper">
