--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <div class="container">
       <div class="title">
+  <a href="https://pump.fun" target="_blank" class="left-link">pump.fun</a>
+
   <img src="pete-logo.png" alt="$PETE logo" class="logo">
+
   <a href="https://x.com/pete" target="_blank">
     <img src="x-logo.png" alt="X (Twitter)" class="x-logo">
   </a>
