--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div class="container">
       <div class="title">
-  <a href="https://pump.fun" target="_blank" class="left-link">pump.fun</a>
+  <a href="https://pump.fun" target="_blank">
+    <img src="pump-logo.png" alt="pump.fun" class="pump-logo">
+  </a>
 
   <img src="pete-logo.png" alt="$PETE logo" class="logo">
 
