--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   <body>
     <div class="container">
       <div class="title">
-  <a href="https://pump.fun" target="_blank">
-    <img src="pump-logo.png" alt="pump.fun" class="pump-logo">
-  </a>
+  <div class="logo-group">
+    <a href="https://pump.fun" target="_blank">
+      <img src="pump-logo.png" alt="pump.fun" class="pump-logo">
+    </a>
 
-  <img src="pete-logo.png" alt="$PETE logo" class="logo">
+    <img src="pete-logo.png" alt="$PETE logo" class="logo">
 
-  <a href="https://x.com/pete" target="_blank">
-    <img src="x-logo.png" alt="X (Twitter)" class="x-logo">
-  </a>
+    <a href="https://x.com/pete" target="_blank">
+      <img src="x-logo.png" alt="X (Twitter)" class="x-logo">
+    </a>
+  </div>
 </div>
       <div class="card">
         <div class="video-wrapper">
