--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
     <div class="container">
       <div class="title">
-  <div class="logo-group">
-    <a href="https://pump.fun" target="_blank">
-      <img src="pump-logo.png" alt="pump.fun" class="pump-logo">
-    </a>
-
-    <img src="pete-logo.png" alt="$PETE logo" class="logo">
-
-    <a href="https://x.com/pete" target="_blank">
-      <img src="x-logo.png" alt="X (Twitter)" class="x-logo">
-    </a>
-  </div>
-</div>
+        <div class="logo-group">
+          <a href="https://pump.fun" target="_blank" rel="noopener">
+            <img src="pump-logo.png" alt="pump.fun" class="pump-logo">
+          </a>
+      
+          <img src="pete-logo.png" alt="$PETE logo" class="logo">
+      
+          <a href="https://x.com/pete" target="_blank" rel="noopener">
+            <img src="x-logo.png" alt="X (Twitter)" class="x-logo">
+          </a>
+        </div>
+      </div>
       <div class="card">
         <div class="video-wrapper">
           <!-- Lägg din videofil i samma mapp och byt filnamn nedan -->
