--- a/index.html
+++ b/index.html
@@ -7,20 +7,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="title">
-        <div class="logo-group">
-          <a href="https://pump.fun" target="_blank" rel="noopener">
-            <img src="pump-logo.png" alt="pump.fun" class="pump-logo">
-          </a>
-      
+  <!-- 🔹 HEADER SECTION (banner behind logos) -->
+  <div class="header">
+    <img src="banner.png" alt="banner" class="banner">
+
+    <div class="title">
+      <div class="logo-group">
+        <a href="https://pump.fun" target="_blank" rel="noopener">
+          <img src="pump-logo.png" alt="pump.fun" class="pump-logo">
+        </a>
+        <a href="rick.html">
           <img src="pete-logo.png" alt="$PETE logo" class="logo">
-      
-          <a href="https://x.com/pete" target="_blank" rel="noopener">
-            <img src="x-logo.png" alt="X (Twitter)" class="x-logo">
-          </a>
-        </div>
+        </a>
+        <a href="https://x.com/pete" target="_blank" rel="noopener">
+          <img src="x-logo.png" alt="X (Twitter)" class="x-logo">
+        </a>
       </div>
+    </div>
+  </div>
+    <div class="container">
       <div class="card">
         <div class="video-wrapper">
           <!-- Lägg din videofil i samma mapp och byt filnamn nedan -->
