--- a/index.html
+++ b/index.html
@@ -26,20 +26,47 @@
     </div>
   </div>
     <div class="container">
-      <div class="card">
-        <div class="video-wrapper">
-          <!-- Lägg din videofil i samma mapp och byt filnamn nedan -->
-          <video controls src="video.mp4"></video>
-          <!-- Alternativt, ange flera källor för bättre formatstöd:
-          <video controls>
-            <source src="video.mp4" type="video/mp4" />
-            <source src="video.webm" type="video/webm" />
-            Din webbläsare stödjer inte videoelementet.
-          </video>
-          -->
+  <!-- Video Section 1 -->
+          <section class="video-section">
+            <div class="card">
+              <div class="video-wrapper">
+                <video controls src="video.mp4"></video>
+              </div>
+            </div>
+            <p class="caption">
+              pete is lonely.. pete has no friends.. pete wants change, but up until this point he has - like many of us, been afraid of it."
+            </p>
+          </section>
+
+          <!-- Video Section 2 -->
+          <section class="video-section">
+            <div class="card">
+              <div class="video-wrapper">
+                <!-- Replace with your second file name -->
+                <video controls src="video2.mp4"></video>
+                <!-- Optional alternative:
+                <video controls>
+                  <source src="video2.mp4" type="video/mp4" />
+                  <source src="video2.webm" type="video/webm" />
+                  Din webbläsare stödjer inte videoelementet.
+                </video>
+                -->
+              </div>
+            </div>
+            <p class="caption">Ever since the first date with Kat, things have been... changing.</p>
+          </section>
+            <!-- Video Section 3 -->
+          <section class="video-section">
+            <div class="card">
+              <div class="video-wrapper">
+                <!-- Byt filnamn till din tredje video -->
+                <video controls src="video3.mp4"></video>
+              </div>
+            </div>
+            <p class="caption">yesterday pete had his first job interview in 2 years.</p>
+          </section>
         </div>
       </div>
-      <p class="caption">pete is lonely.. pete has no friends.. pete is like you.</p>
     </div>
   </body>
 </html>
