--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 -->
               </div>
             </div>
-            <p class="caption">Ever since the first date with Kat, things have been... changing.</p>
+            <p class="caption">Pete hates his job, he once had dreams, but slowly, they all dissapeared </p>
           </section>
             <!-- Video Section 3 -->
           <section class="video-section">
