--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
   <!-- 🔹 HEADER SECTION (banner behind logos) -->
   <div class="header">
-    <img src="banner.png" alt="banner" class="banner">
+    <!--img src="banner.png" alt="banner" class="banner"-->
 
     <div class="title">
       <div class="logo-group">
